[package]
name = "sycamore-dnd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
log = "0.4"
wasm-logger = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "=0.2.84"

[dependencies.sycamore]
git = "https://github.com/sycamore-rs/sycamore.git"
features = ["serde", "suspense"]

[dependencies.web-sys]
features = ["DragEvent", "DataTransfer", "HtmlImageElement"]
version = "0.3"

[workspace]
members = [
  ".",
  "examples/load_text_file",
  "examples/swap_elements",
  "examples/simple"
]