[package]
name = "sycamore-dnd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "=0.2.84"

[dependencies.sycamore]
version = "0.9.0-beta.1"
features = ["serde", "suspense"]

[dependencies.web-sys]
features = ["DragEvent", "DataTransfer", "HtmlImageElement"]
version = "0.3"

[workspace]
members = [
  ".",
  "examples/load_text_file",
  "examples/swap_elements",
  "examples/simple"
]