[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore-dnd = { path = "../.." }
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen = "=0.2.84"

[dependencies.sycamore]
git = "https://github.com/sycamore-rs/sycamore.git"
rev = "ce74cb52f2f46ef285c10101b85a49e6bfbaa3f5"
features = ["serde", "suspense"]