[package]
name = "swap_elements"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore-dnd = { path = "../.." }
serde = "1"
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen = "=0.2.84"

[dependencies.sycamore]
version = "0.9.0-beta.1"
features = ["serde", "suspense"]